# kryon

./: .gitignore  Cargo.toml  LICENSE  VALIDATION_REPORT.md
.agent/skills/acfm-memory/: SKILL.md
.agent/skills/acfm-spec-workflow/: SKILL.md
.agent/skills/brainstorming/: SKILL.md
.agent/skills/ci-deploy/: SKILL.md
.agent/skills/code-maintainability/: SKILL.md
.agent/skills/code-review/: SKILL.md
.agent/skills/context-synthesizer/: SKILL.md
.agent/skills/documentation/: SKILL.md
.agent/skills/microtask-decomposition/: SKILL.md
.agent/skills/openspec-apply-change/: SKILL.md
.agent/skills/openspec-archive-change/: SKILL.md
.agent/skills/openspec-bulk-archive-change/: SKILL.md
.agent/skills/openspec-continue-change/: SKILL.md
.agent/skills/openspec-explore/: SKILL.md
.agent/skills/openspec-ff-change/: SKILL.md
.agent/skills/openspec-new-change/: SKILL.md
.agent/skills/openspec-onboard/: SKILL.md
.agent/skills/openspec-sync-specs/: SKILL.md
.agent/skills/openspec-verify-change/: SKILL.md
.agent/skills/performance-optimizer/: SKILL.md
.agent/skills/project-constitution/: SKILL.md
.agent/skills/project-index/: SKILL.md
.agent/skills/project-index/scripts/: scan_codebase.py
.agent/skills/project-index/templates/: agent-template.md  skill-template.md
.agent/skills/requirement-checklist/: SKILL.md
.agent/skills/research-retrieval/: SKILL.md
.agent/skills/secure-coding-cybersecurity/: SKILL.md
.agent/skills/secure-coding-cybersecurity/references/: ai_coding_pitfalls.md  owasp_top_10_2025.md  secure_coding_examples.md
.agent/skills/spec-analysis/: SKILL.md
.agent/skills/spec-clarification/: SKILL.md
.agent/skills/sync-index/: SKILL.md
.agent/skills/test-generator/: SKILL.md
.agent/skills/testing-qa/: SKILL.md
.agent/workflows/: ac-lite.md  ac.md  opsx-apply.md  opsx-archive.md  opsx-bulk-archive.md  opsx-continue.md  opsx-explore.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-sync.md  opsx-verify.md
.agents/: project-index.md
.specify/memory/: constitution.md  quality-standards.md  security-guidelines.md
crates/kryon-cli/: Cargo.toml
crates/kryon-cli/src/: main.rs
crates/kryon-core/: Cargo.toml
crates/kryon-core/src/: buffer.rs  command.rs  cursor.rs  event.rs  lib.rs
crates/kryon-security/: Cargo.toml
crates/kryon-security/src/: lib.rs  path.rs  subprocess.rs
crates/kryon-tui/: Cargo.toml
crates/kryon-tui/src/: app.rs  file_tree.rs  highlight.rs  lib.rs  markdown.rs  search.rs  tab_bar.rs  terminal.rs  terminal_panel.rs  theme.rs
openspec/changes/kryon-mvp/: .openspec.yaml  design.md  proposal.md  tasks.md
references/: rust-editor-research.md  tasks  walkthrough (what is done by now)
(+1 files in other folders)
