[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kryon Contributors"]
license = "MIT"
description = "Terminal-first code editor"
repository = "https://github.com/kryon-editor/kryon"

[workspace.dependencies]
# Core
ropey = "1.6"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Syntax highlighting
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Config & Serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
unicode-segmentation = "1.11"
dirs = "5"

# Internal crates
kryon-core = { path = "crates/kryon-core" }
kryon-tui = { path = "crates/kryon-tui" }
kryon-security = { path = "crates/kryon-security" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
