[package]
name = "kryon-core"
version.workspace = true
edition.workspace = true
description = "Core engine for the Kryon editor (UI-agnostic)"

[dependencies]
ropey = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }
kryon-security = { workspace = true }

[dev-dependencies]
tempfile = "3"
